docker, make file and minor fixes
