# docs/swagger.json
@@ -126,7 +126,7 @@
                 }
             }
         },
-        "/api/v1/portfolio/detail{ticker}": {
+        "/api/v1/portfolio/detail/{ticker}": {
             "get": {
                 "security": [
                     {
@@ -382,7 +382,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/trade.Trade"
+                            "$ref": "#/definitions/trade.SwaggerTrade"
                         }
                     }
                 ],
@@ -506,7 +506,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/trade.Trade"
+                            "$ref": "#/definitions/trade.UpdateTradeInput"
                         }
                     },
                     {
@@ -688,7 +688,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/trade.TypeTrade"
+                            "$ref": "#/definitions/trade.SwaggerTypeTrade"
                         }
                     }
                 ],
@@ -819,7 +819,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/trade.UpdateTradeInput"
+                            "$ref": "#/definitions/trade.TypeTrade"
                         }
                     }
                 ],
@@ -997,7 +997,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/trade.User"
+                            "$ref": "#/definitions/trade.SwaggerUserSignUp"
                         }
                     }
                 ],
@@ -1071,13 +1071,10 @@
                 }
             }
         },
-        "trade.Trade": {
+        "trade.SwaggerTrade": {
             "type": "object",
             "properties": {
                 "amount": {
-                    "type": "integer"
-                },
-                "id": {
                     "type": "integer"
                 },
                 "price": {
@@ -1088,9 +1085,33 @@
                 },
                 "type_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "trade.SwaggerTypeTrade": {
+            "type": "object",
+            "properties": {
+                "trade_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "trade.SwaggerUserSignUp": {
+            "type": "object",
+            "required": [
+                "name",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
                 },
-                "user_id": {
-                    "type": "integer"
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -1119,34 +1140,6 @@
                 },
                 "type_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "trade.User": {
-            "type": "object",
-            "required": [
-                "name",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "_": {
-                    "type": "integer"
-                },
-                "balance": {
-                    "type": "integer"
-                },
-                "is_superuser": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         }
